--- a/July10Lab.html
+++ b/July10Lab.html
@@ -91,6 +91,14 @@
         </div>
         <br>
         <div>
+            <label for="">Gender</label>
+            <select name="" id="">
+                <option value="male">Male</option>
+                <option value="male">Female</option>
+                <option value="male">Other</option>
+            </select>
+        </div>
+        <div>
             <label for="">Email:</label>
             <input type="email" name="email" placeholder="Enter Your Email"> 
         </div>
