--- a/July10Lab.html
+++ b/July10Lab.html
@@ -91,7 +91,7 @@
         </div>
         <br>
         <div>
-            <label for="">Gender</label>
+            <label for="gender">Gender</label>
             <select name="" id="">
                 <option value="male">Male</option>
                 <option value="male">Female</option>
