added border to table

--- a/1. July 10/index.html
+++ b/1. July 10/index.html
@@ -34,7 +34,7 @@
     </ol>
 
     <!--Table-->
-    <table>
+    <table border="1">
         <thead>
             <tr>
                 <th>Name</th>
@@ -59,7 +59,7 @@
             </tr>
         </tbody>
     </table>
-    
+
     <!--Line break-->
     <br>
     <h1>Heading after a line break</h1>
@@ -108,6 +108,6 @@
     <button>I am Button</button>
     <!--link-->
     <br>
-    <a href="http:\\www.google.com">Google</a>
+    <strong><a href="http:\\www.google.com">Google</a></strong>
 </body>
 </html>
