--- a/29.7.2021/index.html
+++ b/29.7.2021/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang-"en">
+<html lang="en">
 <head>
-    <meta charset-"UTF-8">
+    
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="question-01.css">
+    <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;500&display=swap" rel="stylesheet">
@@ -31,4 +31,11 @@
                HTML provides the structure of the page, CSS the (visual and oral) layout,
                for a variety of devices</p>
       </div>
+      <div class="vhw">
+        <img src="./images/scenary.jpg" alt="" class="main-image"></div>
+        <div class="box1">
+            <h1>heading</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing e
+    
+        </div> 
    </body>
