--- a/1. Aug 2021/index.html
+++ b/1. Aug 2021/index.html
@@ -19,7 +19,10 @@
       <img class="top-cloud" src="images/cloud.png" alt="top-cloud" />
       <h1>I'm Ilyas.</h1>
       <h2 class="h2-weight">
-        A <span class="pro">pro</span>grammer at DevNation
+         A <span class="pro">pro</span>grammer at 
+            <a href="https://www.thedevnation.com/">
+            <img class="dnlogo" src="images/devnationlogo.png" alt="dev-nation-logo">
+</a>
       </h2>
       <img class="bottom-cloud" src="images/cloud.png" alt="bottom-cloud" />
       <img class="mountain" src="images/mountain.png" alt="mountain-img" />
