main section complete

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -39,6 +39,7 @@
         <!-- Navbar code -->
         <nav>
             <!-- Logo -->
+
             <a class="logo-link" href="#">
                 <h1 class="logo">A.Q</h1>
             </a>
@@ -48,6 +49,7 @@
             <label class="menu-btn" for="menu-btn">
                 <span class="hamburger-icon"></span>
             </label>
+
 
             <!-- Menu -->
             <ul class="menu">
@@ -61,20 +63,34 @@
         </nav>
     </section>
 
-    <!-- for social media icons -->
-    <section id="navbar-left">
-        <!--  -->
-    </section>
 
     <!-- Landing page section (Value prop section)-->
     <div class="content">
         <!-- main section code -->
+        <!-- left div -->
+        <div class="intro">
+            <h1 class="intro_content">Hi, I'm Alwaz</h1>
+            <p class="description">Programmer, Web Developer, Open Source Contributer & Technical blogger.</p>
+            <a href="#contact" class="hireme-btn">Hire Me</a>
+        </div>
+
+        <!-- right div -->
+        <div class="img">
+            <img class="image" src="./images/undraw_web_devices_ad58.svg" alt="mypic">
+        </div>
+
     </div>
 
 
     <!-- AboutMe section -->
-    <section id="aboutme">
+    <section id="aboutme-container">
         <!-- About me code here -->
+        <!-- left div -->
+        <div class="aboutme-heading">
+            <h1 class="intro_content">A lil About me</h1>
+        </div>
+        <!-- right div -->
+
     </section>
 
     <!-- Skills section -->
