About me section complete

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -79,6 +79,8 @@
             <img class="image" src="./images/undraw_web_devices_ad58.svg" alt="mypic">
         </div>
 
+
+
     </div>
 
 
@@ -87,9 +89,16 @@
         <!-- About me code here -->
         <!-- left div -->
         <div class="aboutme-heading">
-            <h1 class="intro_content">A lil About me</h1>
+            <h1 class="intro_content">About me</h1>
         </div>
         <!-- right div -->
+
+        <div class="my-desc">
+            <p class="description">Web Developer who aims to craft your desired websites to
+                reality leaving you contended for real.
+                I have a diverse set of skills ranging from design,
+                to HTML,CSS, JavaScript, React all the way to Python. I like contributing to Open Source Projects.</p>
+        </div>
 
     </section>
 
