Skills section complete

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -54,7 +54,7 @@
             <!-- Menu -->
             <ul class="menu">
                 <li><a href="#">Home</a></li>
-                <li><a href="#aboutme">About</a></li>
+                <li><a href="#aboutme-container">About</a></li>
                 <li><a href="#my-projects">Projects</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#experience">Experience</a></li>
@@ -104,8 +104,56 @@
 
     <!-- Skills section -->
     <section id="skills">
-        <!-- skills section code here -->
+
+        <div class="skill-text">
+            <h1>Skills</h1>
+        </div>
+        <div class="row">
+            <div class="skill-box">
+                <i class="fas fa-laptop-code"></i>
+                <div class="skill-name">
+                    <h3>Front-end</h3>
+                </div>
+
+                <ul>
+                    <li>html(5)</li>
+                    <li>css(3)</li>
+                    <li>Javascript(ES6)</li>
+                    <li>Bootstrap</li>
+                    <li>React</li>
+                    <li>Material-UI</li>
+                </ul>
+            </div>
+            <div class="skill-box">
+                <i class="fas fa-server"></i>
+                <div class="skill-name">
+                    <h3>Back-end</h3>
+                </div>
+
+                <ul>
+                    <li>NodeJS</li>
+                    <li>NPM</li>
+                    <li>Express</li>
+                    <li>Mongo</li>
+                    <li>Python</li>
+                </ul>
+            </div>
+            <div class="skill-box">
+                <i class="fas fa-star"></i>
+                <div class="skill-name">
+                    <h3>Tools</h3>
+                </div>
+
+                <ul>
+                    <li>Visual Studio || PyCharm</li>
+                    <li>Bower</li>
+                    <li>Git && Github</li>
+                </ul>
+            </div>
+        </div>
+
     </section>
+
 
 
     <!-- Experience section -->
