Project section complete

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -39,7 +39,6 @@
         <!-- Navbar code -->
         <nav>
             <!-- Logo -->
-
             <a class="logo-link" href="#">
                 <h1 class="logo">A.Q</h1>
             </a>
@@ -146,7 +145,7 @@
 
                 <ul>
                     <li>Visual Studio || PyCharm</li>
-                    <li>Bower</li>
+                    <li>Bowser</li>
                     <li>Git && Github</li>
                 </ul>
             </div>
@@ -154,18 +153,83 @@
 
     </section>
 
-
-
-    <!-- Experience section -->
-    <section id="experience">
-        <!-- Experience section code here -->
-    </section>
-
-
     <!-- My Projects -->
     <section id="my-projects">
         <!-- my project code here -->
+        <div class="project-text">
+            <h1>Projects</h1>
+        </div>
+
+        <!--Project container -->
+        <div class="project-container">
+            <!-- left div- project description-->
+            <div class="project-details">
+                <h3 class="project-name">Job Search Application</h3>
+                <p class="project-description">Job Searching web
+                    application build using HTML,CSS
+                    and Javascript that filter jobs
+                    based on user search.
+                </p>
+                <a href="https://jsjobsearching.netlify.app/" class="hireme-btn">View Demo</a>
+            </div>
+            <!-- right div-project img -->
+            <div class="project-img">
+                <img src="./images/project1.png" alt="Job Search application">
+            </div>
+        </div>
+
+
+        <!-- Project container1 -->
+        <div class="project-container">
+
+            <!-- right div-project img -->
+            <div class="project-img">
+                <img src="./images/project1.png" alt="Job Search application">
+            </div>
+
+            <!-- left div- project description-->
+            <div class="project-details1">
+
+                <h3 class="project-name">NETFLIX CLONE</h3>
+                <p class="project-description">Fully responsive Netflix Clone using react, redux and firebase
+                    authentication.
+                </p>
+                <a href="https://jsjobsearching.netlify.app/" class="hireme-btn">Source Code</a>
+            </div>
+        </div>
+
+
+
+        <!-- Project container 2 -->
+        <div class="project-container">
+            <!-- left div- project description-->
+            <div class="project-details">
+                <h3 class="project-name">DISNEY CLONE</h3>
+                <p class="project-description">Fully responsive Disney Clone with firebase authentication build using
+                    React, redux, Styled Components
+                </p>
+                <a href="https://jsjobsearching.netlify.app/" class="hireme-btn">Source Code</a>
+            </div>
+            <!-- right div-project img -->
+            <div class="project-img">
+                <img src="./images/project1.png" alt="Job Search application">
+            </div>
+        </div>
+
+
     </section>
+    <!-- Project section ends here -->
+
+
+
+
+    <!-- Contact me section -->
+    <section id="contact-me">
+        <!-- contact me section code here -->
+
+    </section>
+
+
 
     <!-- Contact Section -->
     <section id="contact">
