Desktop version complete

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -56,8 +56,7 @@
                 <li><a href="#aboutme-container">About</a></li>
                 <li><a href="#my-projects">Projects</a></li>
                 <li><a href="#skills">Skills</a></li>
-                <li><a href="#experience">Experience</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#contact-me">Contact</a></li>
             </ul>
         </nav>
     </section>
@@ -70,6 +69,35 @@
         <div class="intro">
             <h1 class="intro_content">Hi, I'm Alwaz</h1>
             <p class="description">Programmer, Web Developer, Open Source Contributer & Technical blogger.</p>
+            <div class="social-icons-container">
+                <div class="social-icons">
+                    <ul>
+                        <li>
+                            <a href="https://github.com/Alwaz">
+                                <i class="fab fa-github"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://alwazkazi3.medium.com/">
+                                <i class="fab fa-medium-m"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.linkedin.com/in/alwaz-qazi-485a091b8/">
+                                <i class="fab fa-linkedin-in"></i>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="mailto:alwazkazi3@gmail.com">
+                                <i class="far fa-envelope"></i>
+                            </a>
+                        </li>
+
+                    </ul>
+                </div>
+            </div>
+
             <a href="#contact" class="hireme-btn">Hire Me</a>
         </div>
 
@@ -184,7 +212,7 @@
 
             <!-- right div-project img -->
             <div class="project-img">
-                <img src="./images/project1.png" alt="Job Search application">
+                <img src="./images/project2.png" alt="Job Search application">
             </div>
 
             <!-- left div- project description-->
@@ -194,7 +222,7 @@
                 <p class="project-description">Fully responsive Netflix Clone using react, redux and firebase
                     authentication.
                 </p>
-                <a href="https://jsjobsearching.netlify.app/" class="hireme-btn">Source Code</a>
+                <a href="https://github.com/Alwaz/netflix-clone.git" class="hireme-btn">Source Code</a>
             </div>
         </div>
 
@@ -208,11 +236,11 @@
                 <p class="project-description">Fully responsive Disney Clone with firebase authentication build using
                     React, redux, Styled Components
                 </p>
-                <a href="https://jsjobsearching.netlify.app/" class="hireme-btn">Source Code</a>
+                <a href="https://github.com/Alwaz/Disney-Clone.git" class="hireme-btn">Source Code</a>
             </div>
             <!-- right div-project img -->
             <div class="project-img">
-                <img src="./images/project1.png" alt="Job Search application">
+                <img src="./images/project3.png" alt="Job Search application">
             </div>
         </div>
 
@@ -226,6 +254,8 @@
     <!-- Contact me section -->
     <section id="contact-me">
         <!-- contact me section code here -->
+        <h1>Have Any Projects in Mind ?</h1>
+        <a href="#contact" class="hireme-btn">Contact Me</a>
 
     </section>
 
@@ -234,7 +264,64 @@
     <!-- Contact Section -->
     <section id="contact">
         <!-- contact section code here -->
-        <!-- Contact details and Conrtact form -->
+
+        <!-- Contact details -->
+        <div class="container">
+            <div class="contact-info">
+                <div class="box">
+                    <div class="icon">
+                        <a href="https://www.linkedin.com/in/alwaz-qazi-485a091b8/">
+                            <i class="fab fa-linkedin"></i></a>
+                    </div>
+
+                    <div class="text">
+                        <p>LinkedIn</p>
+                    </div>
+                </div>
+
+
+                <div class="box">
+                    <div class="icon">
+                        <a href="alwazkazi3@gmail.com">
+                            <i class="far fa-envelope"></i></a>
+                    </div>
+                    <div class="text">
+                        <p>alwazkazi3@gmail.com</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Contact form -->
+
+            <div class="contact-form">
+                <form action="submit">
+                    <h2>Contact Me</h2>
+
+                    <div class="inputBox">
+                        <input type="text" required>
+                        <span>Full Name</span>
+                    </div>
+
+
+                    <div class="inputBox">
+                        <input type="email" required>
+                        <span>Email</span>
+                    </div>
+
+                    <div class="inputBox">
+                        <textarea cols="30" rows="10"></textarea>
+                        <span>Type your Message...</span>
+                    </div>
+
+
+                    <div class="inputBox">
+                        <a href="#contact" class="hireme-btn">Send</a>
+                    </div>
+
+
+                </form>
+            </div>
+        </div>
     </section>
 
 
