--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -69,6 +69,7 @@
         <div class="intro">
             <h1 class="intro_content">Hi, I'm Alwaz</h1>
             <p class="description">Programmer, Web Developer, Open Source Contributer & Technical blogger.</p>
+
             <div class="social-icons-container">
                 <div class="social-icons">
                     <ul>
@@ -124,7 +125,9 @@
             <p class="description">Web Developer who aims to craft your desired websites to
                 reality leaving you contended for real.
                 I have a diverse set of skills ranging from design,
-                to HTML,CSS, JavaScript, React all the way to Python. I like contributing to Open Source Projects.</p>
+                to HTML,CSS, JavaScript, React all the way to Python.
+                I like contributing to Open Source Projects as
+                well.</p>
         </div>
 
     </section>
@@ -173,8 +176,8 @@
 
                 <ul>
                     <li>Visual Studio || PyCharm</li>
-                    <li>Bowser</li>
-                    <li>Git && Github</li>
+                    <li>Browser</li>
+                    <li>Git & Github</li>
                 </ul>
             </div>
         </div>
@@ -327,7 +330,8 @@
 
     <!-- Footer section -->
     <footer>
-        <!-- footer section here -->
+        <p>Alwaz Qazi</p>
+        <p>Copyright 2021 - All rights reserved</p>
     </footer>
 
 
