Dashboard Project almost done!

--- a/4. 24th Aug (Dashboard Project)/index.html
+++ b/4. 24th Aug (Dashboard Project)/index.html
@@ -18,90 +18,90 @@
                 <img src="./icons/sidebar-chain.PNG" alt="">
             </div>
         </div>
-        <div class="main-dashboard">
-            <div class="progress-dashb">
-                <h1>Progress Dashboard</h1>
-                <div class="exam">
-                    <div class="start-ex">
-                        <p><span>DEADLINE</span> 12:00</p>
-                        <h1>Exam - Unit 5</h1>
-                        <p>Spanish for Beginners</p>
-                    </div>
-                    <div class="end-ex">
-                        <img src="./icons/people-icons.PNG" alt="">
-                        <a href="">Start testing</a>
-                    </div>
+        <div class="progress-dashb">
+            <h1>Progress Dashboard</h1>
+            <div class="exam">
+                <div class="start-ex">
+                    <p class="time"><span class="subTitle">DEADLINE</span> 12:00</p>
+                    <h1 class="largeTitle">Exam - Unit 5</h1>
+                    <p class="subTitle">Spanish for Beginners</p>
                 </div>
-                <div class="homework">
-                    <img src="./icons/hw-tick.PNG" alt="">
-                    <h2>Homework</h2>
-                    <p>For today's lesson.</p>
-                </div>
-                <div class="reading">
-                    <img src="./icons/reading-tick.PNG" alt="">
-                    <h2>Reading</h2>
-                    <p>25 words per week.</p>
-                </div>
-                <div class="group-info">
-                    <div class="info-top">
-                        <h2>Group info</h2>
-                        <img src="./icons/bell.PNG" alt="">
-                        <p>13 students in the group</p>
-                    </div>
-                    <div class="info-middle">
-                        <h2>Group homework</h2>
-                        <p>5 students from your group online now</p>
-                        <img src="./icons/right-white.PNG" alt="">
-                    </div>
-                    <div class="info-bottom">
-                        <h2>Today's Lesson</h2>
-                        <h2>12:00</h2>
-                        <p>Unit 6 - Articles</p>
-                    </div>
-                </div>
-                <div class="course">
-                    <img src="./icons/flag.PNG" alt="">
-                    <h1>Spanish for Beginners</h1>
-                    <p>75%</p>
-                </div>
-                <div class="grammar">
-                    <img src="./icons/grammar-pencil.PNG" alt="">
-                    <p><span>Grammar</span>+30 grammar rules</p>
-                    <img src="./icons/right-black.PNG" alt="">
-                </div>
-                <div class="dictionary">
-                    <img src="./icons/dict-a.PNG" alt="">
-                    <p><span>Dictionary</span>+10 new words</p>
-                    <img src="./icons/right-black.PNG" alt="">
+                <div class="end-ex">
+                    <img src="./icons/people-icons.PNG" alt="">
+                    <a href="">Start testing</a>
                 </div>
             </div>
+            <div class="homework">
+                <img src="./icons/hw-tick.PNG" alt="">
+                <h2>Homework</h2>
+                <p>For today's lesson.</p>
+            </div>
+            <div class="reading">
+                <img src="./icons/reading-tick.PNG" alt="">
+                <h2>Reading</h2>
+                <p>25 words per week.</p>
+            </div>
+            <div class="group-info">
+                <div class="info-top">
+                    <h2 class="title">Group info</h2>
+                    <img src="./icons/bell.PNG" alt="">
+                    <p class="subTitle">13 students in the group</p>
+                </div>
+                <div class="info-middle">
+                    <h2 class="title">Group homework</h2>
+                    <p class="subTitle">5 students from your group online now</p>
+                    <img src="./icons/right-white.PNG" alt="">
+                </div>
+                <div class="info-bottom">
+                    <h2 class="title">Today's Lesson</h2>
+                    <h2>12:00</h2>
+                    <p class="subTitle">Unit 6 - Articles</p>
+                </div>
+            </div>
+            <div class="course">
+                <img src="./icons/flag.PNG" alt="">
+                <h1 class="largeTitle">Spanish for<br> Beginners</h1>
+                <p>75%</p>
+                <progress value="75" max="100"></progress>
+            </div>
+            <div class="grammar">
+                <img src="./icons/grammar-pencil.PNG" alt="">
+                <p class="title">Grammar<br><span class="subTitle">+30 grammar rules</span></p>
+                <img src="./icons/right-black.PNG" alt="">
+            </div>
+            <div class="dictionary">
+                <img src="./icons/dict-a.PNG" alt="">
+                <p class="title">Dictionary<br><span class="subTitle">+10 new words</span></p>
+                <img src="./icons/right-black.PNG" alt="">
+            </div>
         </div>
+        
         <div class="profile-dashb">
             <div class="intro">
                 <img src="./icons/profile-pic.PNG" alt="">
-                <h2>Harrison Phillips</h2>
-                <p>Business Analyst</p>
+                <h2 class="largeTitle">Harrison Phillips</h2>
+                <p class="subTitle">Business Analyst</p>
             </div>
             <div class="offer">
-                <p><span>Get -10% sell price</span>for <<Spanish A2>> course</p>
+                <p class="title">Get -10% sell price<br><span class="subTitle">for Spanish A2 course</span></p>
                 <img src="./icons/right-orng.PNG" alt="">
             </div>
             <div class="courses-progress">
-                <p>Courses Progress</p>
+                <p class="largeTitle">Courses Progress</p>
                 <div class="grammar">
-                    <span>63%</span>
+                    <span class="percent">63%</span>
                     <img src="./icons/grammar-icon.png" alt="">
-                    <p><span>Grammar</span>Learn new rules.</p>
+                    <p class="title">Grammar<br><span class="subTitle">Learn new rules.</span></p>
                 </div>
                 <div class="dictionary">
-                    <span>78%</span>
+                    <span class="percent">78%</span>
                     <img src="./icons/dict-icon.PNG" alt="">
-                    <p><span>Dictionary</span>Learn 5 new words.</p>
+                    <p class="title">Dictionary<br><span class="subTitle">Learn 5 new words.</span></p>
                 </div>
                 <div class="reading">
-                    <span>34%</span>
+                    <span class="percent">34%</span>
                     <img src="./icons/reading-icon.PNG" alt="">
-                    <p><span>Reading</span>Train your skills.</p>
+                    <p class="title">Reading<br><span class="subTitle">Train your skills.</span></p>
                 </div>
             </div>
         </div>
